# dti_reviewer

./: .buildinfo  .gitignore  MANIFEST.in  README.rst  api.html  architecture.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: build-docs.yml
_sources/: architecture.rst.txt  getting_started.rst.txt  index.rst.txt
docs/: conf.py  index.rst
docs/dti_reviewer/: index.rst
docs/source/: api.rst  architecture.rst  conf.py  getting_started.rst  index.rst
dti_reviewer/: .dockerignore  conftest.py  controllers.py  docker-compose.yml  expert_finder.ipynb
dti_reviewer/backend/: Dockerfile  api.py  app.py  celery_app.py  environment.yml  ggg.ipynb  similarity_engine.py  tasks.py
dti_reviewer/backend/tests/: test_api.py
dti_reviewer/backend/tests/expected_data/: expected_search_response.json
dti_reviewer/my-app/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
dti_reviewer/my-app/nginx/: default.conf
dti_reviewer/my-app/src/: App.tsx  index.css
dti_reviewer/my-app/src/components/: AppSidebar.tsx  Navbar.tsx  ResultTable.test.tsx  ResultTable.tsx
dti_reviewer/my-app/src/components/pages/: About.tsx  FormPage.tsx
licenses/: LICENSE.rst
